Feature - Add embedded project videos and prototype layout

--- a/index.html
+++ b/index.html
@@ -13,13 +13,154 @@
 </head>
 
 <body>
-    <h1>Test</h1>
-    <h2>This is a super basic test of hosting a static site on Keroku</h2>
+    <header>
+        <div class="navbar navbar-dark bg-dark shadow-sm">
+            <div class="container d-flex justify-content-between">
+                <a href="#" class="navbar-brand d-flex align-items-center">
+                    <img style="height:50px; margin-right: 5px" src="dog-logo-white.png" />
+                    <strong>Maddog Garage</strong>
+                </a>
+            </div>
+        </div>
+    </header>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-        crossorigin="anonymous"></script>
+    <main role="main">
+        <section style="padding:25px; margin:0px" class="jumbotron text-center">
+            <div class="container">
+                <h1 class="jumbotron-heading">Projects</h1>
+                <div class="row justify-content-center">
+                    <div class="col col-lg-4 col-sm-8 col-md-7">
+                        <p class="text-muted">ki·​net·​ic | \kə-ˈne-tik</p>
+                        <p class="text-muted">: of or relating to the motion of material bodies and the forces and energy
+                            associated therewith
+                        </p>
+                        <p class="text-muted float-right">- Merriam Webster</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="album py-5 bg-light">
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-md-4 d-flex">
+                        <div class="card mb-4 shadow-sm flex-fill">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/_D-3ocCRWJs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">Really just a prototype, these lips can even say a few words - copyright
+                                    2106.
+                                </p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button onclick="return true;" class="btn btn-sm btn-outline-secondary ">More</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 d-flex">
+                        <div class="card mb-4 shadow-sm flex-fill">
+                            <div class="embed-responsive embed-responsive-16by9 ">
+                                <iframe width="560 " height="315 " src="https://www.youtube.com/embed/wDBD9A17G18
+                                                    " frameborder="0 " allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture "
+                                    allowfullscreen></iframe>
+                            </div>
+                            <div class="card-body ">
+                                <p class="card-text ">I have built a robot arm for the Sidewalk Gallery. Passers-by can now
+                                    manulipate objects inside the window.</p>
+                                <div class="d-flex justify-content-between align-items-center ">
+                                    <div class="btn-group ">
+                                        <button type="button " class="btn btn-sm btn-outline-secondary ">More</button>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 d-flex">
+                        <div class="card mb-4 shadow-sm flex-fill">
+                            <div class="embed-responsive embed-responsive-16by9 ">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/IJK3YwoJ_RE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                            <div class="card-body ">
+                                <p class="card-text ">A political puzzle.</p>
+                                <div class="d-flex justify-content-between align-items-center ">
+                                    <div class="btn-group ">
+                                        <button type="button " class="btn btn-sm btn-outline-secondary ">More</button>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 d-flex">
+                        <div class="card mb-4 shadow-sm flex-fill">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/PakB7RQsINw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">A crossword puzzle and riddle all in one, for the robot arm.
+                                </p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button onclick="return true;" class="btn btn-sm btn-outline-secondary ">More</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 d-flex">
+                        <div class="card mb-4 shadow-sm flex-fill">
+                            <div class="embed-responsive embed-responsive-16by9 ">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/EMaMT0HSs40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                            <div class="card-body ">
+                                <p class="card-text ">Barb's lamp.</p>
+                                <div class="d-flex justify-content-between align-items-center ">
+                                    <div class="btn-group ">
+                                        <button type="button " class="btn btn-sm btn-outline-secondary ">More</button>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 d-flex">
+                        <div class="card mb-4 shadow-sm flex-fill">
+                            <div class="embed-responsive embed-responsive-16by9 ">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/gnnbs08AJss" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                            <div class="card-body ">
+                                <p class="card-text ">The Giant was constructed over the summer of 2008 for the "Tough Art"
+                                    program at the Children's Museum of Pittsburgh.</p>
+                                <div class="d-flex justify-content-between align-items-center ">
+                                    <div class="btn-group ">
+                                        <button type="button " class="btn btn-sm btn-outline-secondary ">More</button>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </main>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo "
+        crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js " integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k "
+        crossorigin="anonymous "></script>
 </body>
 
 </html>
